fixed icon gap

--- a/src/style/body.styl
+++ b/src/style/body.styl
@@ -1,5 +1,6 @@
 body
     font-family: sans-serif, 'Microsoft JhengHei', 'Lato', 'Helvetica Neue', Arial, Helvetica;
+
 div.bkg
     background-image: url('../images/pattern.png')
     background-size: cover
@@ -10,3 +11,13 @@ div.bkg
     z-index: -1
     width: 100%
     height: 100vh
+
+.segment > p
+    line-height: 2em 
+    text-indent: 2em
+
+.segment > .list > a > i.fa
+    margin-right: 0.3em
+    width: 1.5em 
+    padding-right: 0.3em 
+
